# battleship

./: CMakeLists.txt  README.md  test_layout.txt
examples/: layout.txt
include/: Board.h  Game.h  Ship.h  Utils.h  enemy_strategy.h
include/difficulty/: easy_strategy.h  hard_strategy.h  medium_strategy.h
src/: Board.cpp  Game.cpp  Ship.cpp  Utils.cpp  enemy_strategy.cpp  main.cpp
src/difficulty/: easy_strategy.cpp  hard_strategy.cpp  medium_strategy.cpp
